--- a/lesson11/sodaSprings.html
+++ b/lesson11/sodaSprings.html
@@ -15,7 +15,7 @@
         <p>Saturday = Preston Pancakes in the Park!  9:00 a.m. Saturday at the city park pavilion.</p>
     </div>
     <header>
-        <img src="assets/weatherBoi.png" alt="Logo" class="logo">
+        <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/index.html"><img src="assets/weatherBoi.png" alt="Logo" class="logo"></a>
         <div>
             <h1>Weather Boi</h1>
             <p>Never be surprised again.</p>
@@ -106,13 +106,18 @@
                 </tbody>
             </table>
         </div>
-        <h3>Article Title</h3>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem expedita tempore maiores ipsa ratione tempora molestias consequatur, labore eum voluptate earum, quod quibusdam voluptatem consectetur qui? Voluptates, distinctio, voluptatem aut delectus exercitationem officiis blanditiis labore quis suscipit in eum, illo vero. Dolorum veritatis dolor veniam saepe porro. Magni ab quas id in tempora laudantium, sint possimus vitae cupiditate libero recusandae sit. Tempore vitae recusandae adipisci eos hic eius ullam aperiam consequatur exercitationem natus laudantium tenetur ab necessitatibus repellendus, ducimus, ipsum placeat dolorum modi blanditiis porro neque. Aut nostrum eum vitae architecto atque, delectus amet dolorum? Recusandae dolores explicabo eveniet odit.</p>
-        
+        <h3 class="title">Fun All Year Around!</h3>
+        <h4 class="author">Author: Samuel Witt</h4>
+        <div class="article">
+            <figure>
+                <img src="assets/articleImg1.jpg" alt="boat on one half winter on the other" class="articleImg">
+            </figure>
+            <p>Here in Fish Haven Idaho it doesn't matter whether or not it is sunshine or snow you can have a blast. With having Bear Lake shores so close to us boating trips can be right outside your front door. With nearby mountains hiking is also another fun thing to do during the summer. When it snows outside you'll be able to have a great time. From skiing and snowboarding to snowmobiling we have it all.<br><br>When planning your next family vacation don't miss out and come visit Fish Haven. You can come any time of the year and make memories that will last a lifetime!</p>
+        </div>
     </main>
     <footer>
         <div class="contact">
-            <img src="assets/map.jpg" alt="Location Map" class="map">
+            <img src="assets/sodaSprings200_100.jpg" alt="Location Map" class="map">
             <ul class="info">
                 <li><b>Contact Information</b></li>
                 <li>Address: 1000 fake street</li>
