--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -15,7 +15,7 @@
         <p>Saturday = Preston Pancakes in the Park!  9:00 a.m. Saturday at the city park pavilion.</p>
     </div>
     <header>
-        <img src="assets/weatherBoi.png" alt="Logo" class="logo">
+        <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/index.html"><img src="assets/weatherBoi.png" alt="Logo" class="logo"></a>
         <div>
             <h1>Weather Boi</h1>
             <p>Never be surprised again.</p>
