--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -110,14 +110,14 @@
         <h4 class="author">Author: Samuel Witt</h4>
         <div class="article">
             <figure>
-                <img src="assets/articleImg1.jpg" alt="boat on one half winter on the other" class="articleImg">
+                <img src="assets/articleImg1.jpg" alt="lion on one half tiger on the other" class="articleImg">
             </figure>
-            <p>Here in Fish Haven Idaho it doesn't matter whether or not it is sunshine or snow you can have a blast. With having Bear Lake shores so close to us boating trips can be right outside your front door. With nearby mountains hiking is also another fun thing to do during the summer. When it snows outside you'll be able to have a great time. From skiing and snowboarding to snowmobiling we have it all.<br><br>When planning your next family vacation don't miss out and come visit Fish Haven. You can come any time of the year and make memories that will last a lifetime!</p>
+            <p>Yes this is The Preston Idaho the birthplace of the mystical creature known as Napoleon Dynamite. One can assume as a young boy Napoleon with his curly locks would go rollerblading downtown having the wind blowing his hair. As he grew up he learned more about his true inner awesomeness. With daily practice he was able to master many different fighting styles he would later use to be able to defeat many mystical ancient beasts.<br><br>Some of these mystical ancient beasts include the ferocious deadly cunning fierce Liggers of Pocatello Idaho. Other beasts he has defeated included Alaskan wolverines and maybe one day you. When he locks up his house at night it is not to protect himself from you but to protect you from <b>Napoleon Andrew Dustin Dynamite, Sr.</b></p>
         </div>  
     </main>
     <footer>
         <div class="contact">
-            <img src="assets/map.jpg" alt="Location Map" class="map">
+            <img src="assets/preston200_100.jpg" alt="Location Map" class="map">
             <ul class="info">
                 <li><b>Contact Information</b></li>
                 <li>Address: 1000 fake street</li>
