--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -106,13 +106,13 @@
                 </tbody>
             </table>
         </div>
-        <h3 class="title">Fun All Year Around!</h3>
+        <h3 class="title">Birthplace of Mythical Hero</h3>
         <h4 class="author">Author: Samuel Witt</h4>
         <div class="article">
             <figure>
                 <img src="assets/articleImg1.jpg" alt="lion on one half tiger on the other" class="articleImg">
             </figure>
-            <p>Yes this is The Preston Idaho the birthplace of the mystical creature known as Napoleon Dynamite. One can assume as a young boy Napoleon with his curly locks would go rollerblading downtown having the wind blowing his hair. As he grew up he learned more about his true inner awesomeness. With daily practice he was able to master many different fighting styles he would later use to be able to defeat many mystical ancient beasts.<br><br>Some of these mystical ancient beasts include the ferocious deadly cunning fierce Liggers of Pocatello Idaho. Other beasts he has defeated included Alaskan wolverines and maybe one day you. When he locks up his house at night it is not to protect himself from you but to protect you from <b>Napoleon Andrew Dustin Dynamite, Sr.</b></p>
+            <p>Yes this is The Preston Idaho the birthplace of the mystical creature known as Napoleon Dynamite. One can assume as a young boy Napoleon with his curly locks would go rollerblading downtown having the wind blowing his hair. As he grew up he learned more about his true inner awesomeness. With daily practice he was able to master many different fighting styles he would later use to be able to defeat many mystical ancient beasts.<br><br>Some of these mystical ancient beasts include the ferocious deadly cunning fierce Ligers of Pocatello Idaho. Other beasts he has defeated included Alaskan wolverines and maybe one day you. When he locks up his house at night it is not to protect himself from you but to protect you from <b>Napoleon Andrew Dustin Dynamite, Sr.</b></p>
         </div>  
     </main>
     <footer>
