--- a/lesson11/sodaSprings.html
+++ b/lesson11/sodaSprings.html
@@ -106,13 +106,13 @@
                 </tbody>
             </table>
         </div>
-        <h3 class="title">Fun All Year Around!</h3>
+        <h3 class="title">Budget YellowStone!!!</h3>
         <h4 class="author">Author: Samuel Witt</h4>
         <div class="article">
             <figure>
-                <img src="assets/articleImg1.jpg" alt="boat on one half winter on the other" class="articleImg">
+                <img src="assets/articleImg2.jpg" alt="boat on one half winter on the other" class="articleImg">
             </figure>
-            <p>Here in Fish Haven Idaho it doesn't matter whether or not it is sunshine or snow you can have a blast. With having Bear Lake shores so close to us boating trips can be right outside your front door. With nearby mountains hiking is also another fun thing to do during the summer. When it snows outside you'll be able to have a great time. From skiing and snowboarding to snowmobiling we have it all.<br><br>When planning your next family vacation don't miss out and come visit Fish Haven. You can come any time of the year and make memories that will last a lifetime!</p>
+            <p>Have you ever wanted to visit Yellowstone but didn't have an extra 3 hours and 18 minutes to be able to drive up there and see Old Faithful. Well I got a fix for you! You can visit Soda Springs Idaho which is exactly 3 hours and 18 minutes away from Yellowstone subtracting the time you can make it there almost instantly(I think). At Soda Springs we have a geyser that goes off every hour. It goes up in the air really high, trust me I've seen it before. You can easily stack length wise 14 small pickup trucks or 12 larger pickup trucks and you wouldn't touch the top of its spray. Would give this a great budget option for YellowStone!!!</p>
         </div>
     </main>
     <footer>
