--- a/lesson11/sodaSprings.html
+++ b/lesson11/sodaSprings.html
@@ -106,6 +106,9 @@
                 </tbody>
             </table>
         </div>
+        <div class="events">
+            <h2>Upcoming Events:</h2>
+        </div>
         <h3 class="title">Budget YellowStone!!!</h3>
         <h4 class="author">Author: Samuel Witt</h4>
         <div class="article">
@@ -138,6 +141,7 @@
     <script src="js/ham.js"></script>
     <script src="js/pancake.js"></script>
     <script src="js/weather.js"></script>
+    <script src="js/homeJSON.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script> WebFont.load({google: {families: ['Open Sans Condensed', 'Roboto']}});</script>
 </body>
