final commit to my knowledge

--- a/lesson11/sodaSprings.html
+++ b/lesson11/sodaSprings.html
@@ -113,7 +113,7 @@
         <h4 class="author">Author: Samuel Witt</h4>
         <div class="article">
             <figure>
-                <img src="assets/articleImg2.jpg" alt="boat on one half winter on the other" class="articleImg">
+                <img src="assets/articleImg2.jpg" alt="a geyser with trucks next to it" class="articleImg">
             </figure>
             <p>Have you ever wanted to visit Yellowstone but didn't have an extra 3 hours and 18 minutes to be able to drive up there and see Old Faithful. Well I got a fix for you! You can visit Soda Springs Idaho which is exactly 3 hours and 18 minutes away from Yellowstone subtracting the time you can make it there almost instantly(I think). At Soda Springs we have a geyser that goes off every hour. It goes up in the air really high, trust me I've seen it before. You can easily stack length wise 14 small pickup trucks or 12 larger pickup trucks and you wouldn't touch the top of its spray. Would give this a great budget option for YellowStone!!!</p>
         </div>
