--- a/lesson11/fishHaven.html
+++ b/lesson11/fishHaven.html
@@ -131,7 +131,7 @@
         </div>
         <div class=footer>
             &copy;2020 | Samuel Witt | Idaho |
-            <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a>
+            <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a> | Weather Data Provided By: <a href="https://openweathermap.org/">OpenWeatherMap</a>
             <br>
             Last Date Updated: <span id="currentdate"></span>
         </div>
