--- a/scootsProject/pupper.html
+++ b/scootsProject/pupper.html
@@ -31,7 +31,40 @@
         </nav>
         <a class="contact" href="#"><button>Contact Us!</button></a>
     </header>
-    <main>
+    <main id="pupper">
+        <h2>Pupper Gallery Easter Egg</h2>
+        <figure>
+            <img src="assets/bella1.jpg" alt="">
+            <figcaption>Water Balloon Time!</figcaption>
+        </figure>
+        <figure>
+            <img src="assets/bella2.jpg">
+            <figcaption>Yawning</figcaption>
+        </figure>
+        <figure>
+            <img src="assets/bella3.jpg">
+            <figcaption>Morning Pic ;)</figcaption>
+        </figure>
+        <figure>
+            <img src="assets/bella4.jpg">
+            <figcaption>Life is Ruff</figcaption>
+        </figure>
+        <figure>
+            <img src="assets/bella5.jpg">
+            <figcaption>Where is my Food</figcaption>
+        </figure>
+        <figure>
+            <img src="assets/bella6.jpg">
+            <figcaption>Give Me Your Food</figcaption>
+        </figure>
+        <figure>
+            <img src="assets/bella7.jpg">
+            <figcaption>LAST WARNING GIVE ME FOOD</figcaption>
+        </figure>
+        <figure>
+            <img src="assets/bella8.jpg">
+            <figcaption>thx for food</figcaption>
+        </figure>
     </main>
 </div>
 </div>
