--- a/scootsProject/pupper.html
+++ b/scootsProject/pupper.html
@@ -83,7 +83,7 @@
                     <li><a href="#">Rentals</a></li>
                     <li><a href="#">Reservations</a></li>
                     <li><a href="#">Tours</a></li>
-                    <li><a href="#">Pupper</a></li>
+                    <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/pupper.html">Pupper</a></li>
                 </ul>
             </div>
             <div class="feetBarContact">
