--- a/scootsProject/index.html
+++ b/scootsProject/index.html
@@ -19,7 +19,7 @@
 <div id="container">
 <div id="main">
     <header>
-        <a href="#"><img src="assets/logo.png" alt="Scoots Logo" class="logo"></a>
+        <a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/index.html"><img src="assets/logo.png" alt="Scoots Logo" class="logo"></a>
         <nav>
             <ul class= "navBar">
                 <li><a class="ham" href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
