--- a/scootsProject/pupper.html
+++ b/scootsProject/pupper.html
@@ -19,7 +19,7 @@
 <div id="container">
 <div id="main">
     <header>
-        <a href="#"><img src="assets/logo.png" alt="Scoots Logo" class="logo"></a>
+        <a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/index.html"><img src="assets/logo.png" alt="Scoots Logo" class="logo"></a>
         <nav>
             <ul class= "navBar">
                 <li><a class="ham" href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
@@ -34,35 +34,35 @@
     <main id="pupper">
         <h2>Pupper Gallery Easter Egg</h2>
         <figure>
-            <img src="assets/bella1.jpg" alt="">
+            <img src="assets/bella1.jpg" alt="bella the dog Water Balloon Time!">
             <figcaption>Water Balloon Time!</figcaption>
         </figure>
         <figure>
-            <img src="assets/bella2.jpg">
+            <img src="assets/bella2.jpg" alt="bella the dog Yawning">
             <figcaption>Yawning</figcaption>
         </figure>
         <figure>
-            <img src="assets/bella3.jpg">
+            <img src="assets/bella3.jpg" alt="bella the dog Morning Pic ;)">
             <figcaption>Morning Pic ;)</figcaption>
         </figure>
         <figure>
-            <img src="assets/bella4.jpg">
+            <img src="assets/bella4.jpg" alt="bella the dog Life is Ruff">
             <figcaption>Life is Ruff</figcaption>
         </figure>
         <figure>
-            <img src="assets/bella5.jpg">
+            <img src="assets/bella5.jpg" alt="bella the dog Where is my Food">
             <figcaption>Where is my Food</figcaption>
         </figure>
         <figure>
-            <img src="assets/bella6.jpg">
+            <img src="assets/bella6.jpg" alt="bella the dog Give Me Your Food">
             <figcaption>Give Me Your Food</figcaption>
         </figure>
         <figure>
-            <img src="assets/bella7.jpg">
+            <img src="assets/bella7.jpg" alt="bella the dog LAST WARNING GIVE ME FOOD">
             <figcaption>LAST WARNING GIVE ME FOOD</figcaption>
         </figure>
         <figure>
-            <img src="assets/bella8.jpg">
+            <img src="assets/bella8.jpg" alt="bella the dog thx for food">
             <figcaption>thx for food</figcaption>
         </figure>
     </main>
