--- a/scootsProject/index.html
+++ b/scootsProject/index.html
@@ -24,12 +24,12 @@
             <ul class= "navBar">
                 <li><a class="ham" href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
                 <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/index.html">Home</a></li>
-                <li><a href="#">Rentals</a></li>
-                <li><a href="#">Reservations</a></li>
-                <li><a href="#">Tours</a></li>
+                <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/rentals.html">Rentals</a></li>
+                <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/reservations.html">Reservations</a></li>
+                <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/tours.html">Tours</a></li>
             </ul>
         </nav>
-        <a class="contact" href="#"><button>Contact Us!</button></a>
+        <a class="contact" href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/contact.html"><button>Contact Us!</button></a>
     </header>
     <main>
     </main>
