--- a/scootsProject/index.html
+++ b/scootsProject/index.html
@@ -47,18 +47,18 @@
             <div class="feetBarNav">
                 <ul>
                     <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/index.html">Home</a></li>
-                    <li><a href="#">Rentals</a></li>
-                    <li><a href="#">Reservations</a></li>
-                    <li><a href="#">Tours</a></li>
+                    <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/rentals.html">Rentals</a></li>
+                    <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/reservations.html">Reservations</a></li>
+                    <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/tours.html">Tours</a></li>
                     <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/pupper.html">Pupper</a></li>
                 </ul>
             </div>
             <div class="feetBarContact">
                 <ul>
                     <li><b>Contact Information</b></li>
-                    <li>Address: 1000 fake street</li>
-                    <li>Phone number: (555) 555-5555</li>
-                    <li>Email: totallyrealemail@fakeEmail.com</li>
+                    <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/contact.html">Address: 1000 fake street</a></li>
+                    <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/contact.html">Phone number: (555) 555-5555</a></li>
+                    <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/contact.html">Email: totallyrealemail@fakeEmail.com</a></li>
                 </ul>
             </div>
         </div>
