--- a/scootsProject/pupper.html
+++ b/scootsProject/pupper.html
@@ -34,36 +34,84 @@
     <main id="pupper">
         <h2>Pupper Gallery Easter Egg</h2>
         <figure>
-            <img src="assets/bella1.jpg" alt="bella the dog Water Balloon Time!">
+            <img src="assets/bella01.jpg" alt="bella the dog Water Balloon Time!">
             <figcaption>Water Balloon Time!</figcaption>
         </figure>
         <figure>
-            <img src="assets/bella2.jpg" alt="bella the dog Yawning">
+            <img src="assets/bella02.jpg" alt="bella the dog Yawning">
             <figcaption>Yawning</figcaption>
         </figure>
         <figure>
-            <img src="assets/bella3.jpg" alt="bella the dog Morning Pic ;)">
+            <img src="assets/bella03.jpg" alt="bella the dog Morning Pic ;)">
             <figcaption>Morning Pic ;)</figcaption>
         </figure>
         <figure>
-            <img src="assets/bella4.jpg" alt="bella the dog Life is Ruff">
+            <img src="assets/bella04.jpg" alt="bella the dog Life is Ruff">
             <figcaption>Life is Ruff</figcaption>
         </figure>
         <figure>
-            <img src="assets/bella5.jpg" alt="bella the dog Where is my Food">
+            <img src="assets/bella05.jpg" alt="bella the dog Where is my Food">
             <figcaption>Where is my Food</figcaption>
         </figure>
         <figure>
-            <img src="assets/bella6.jpg" alt="bella the dog Give Me Your Food">
+            <img src="assets/bella06.jpg" alt="bella the dog Give Me Your Food">
             <figcaption>Give Me Your Food</figcaption>
         </figure>
         <figure>
-            <img src="assets/bella7.jpg" alt="bella the dog LAST WARNING GIVE ME FOOD">
+            <img src="assets/bella07.jpg" alt="bella the dog LAST WARNING GIVE ME FOOD">
             <figcaption>LAST WARNING GIVE ME FOOD</figcaption>
         </figure>
         <figure>
-            <img src="assets/bella8.jpg" alt="bella the dog thx for food">
+            <img src="assets/bella08.jpg" alt="bella the dog thx for food">
             <figcaption>thx for food</figcaption>
+        </figure>
+        <figure>
+            <img src="assets/bella09.jpg" alt="bella the dog tHis iS tHe NorMal WAy tO SIt">
+            <figcaption>tHis iS tHe NorMal WAy tO SIt</figcaption>
+        </figure>
+        <figure>
+            <img src="assets/bella10.jpg" alt="bella the dog I love Mc Furry">
+            <figcaption>I love Mc Furry</figcaption>
+        </figure>
+        <figure>
+            <img src="assets/bella11.jpg" alt="bella the dog Nap Time!">
+            <figcaption>Nap Time!</figcaption>
+        </figure>
+        <figure>
+            <img src="assets/bella12.jpg" alt="bella the dog hold me ground hurts my butt">
+            <figcaption>hold me ground hurts my butt</figcaption>
+        </figure>
+        <figure>
+            <img src="assets/bella13.jpg" alt="bella the dog I HATE YOU GET ME OUT">
+            <figcaption>I HATE YOU GET ME OUT</figcaption>
+        </figure>
+        <figure>
+            <img src="assets/bella14.jpg" alt="bella the dog Helping get the Kids to school">
+            <figcaption>Helping get the Kids to school</figcaption>
+        </figure>
+        <figure>
+            <img src="assets/bella15.jpg" alt="bella the dog what kind of magic is this">
+            <figcaption>what kind of magic is this</figcaption>
+        </figure>
+        <figure>
+            <img src="assets/bella16.jpg" alt="bella the dog dont rake me up">
+            <figcaption>dont rake me up</figcaption>
+        </figure>
+        <figure>
+            <img src="assets/bella17.jpg" alt="bella the dog Where did you throw that snowball">
+            <figcaption>Where did you snowball go??</figcaption>
+        </figure>
+        <figure>
+            <img src="assets/bella18.jpg" alt="bella the dog Fire keeps me warm">
+            <figcaption>Fire keeps me warm</figcaption>
+        </figure>
+        <figure>
+            <img src="assets/bella19.jpg" alt="bella the dog I luv Fire">
+            <figcaption>I luv Fire</figcaption>
+        </figure>
+        <figure>
+            <img src="assets/bella20.jpg" alt="bella the dog New toy nom nom">
+            <figcaption>New toy nom nom</figcaption>
         </figure>
     </main>
 </div>
