--- a/scootsProject/pupper.html
+++ b/scootsProject/pupper.html
@@ -24,12 +24,12 @@
             <ul class= "navBar">
                 <li><a class="ham" href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
                 <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/index.html">Home</a></li>
-                <li><a href="#">Rentals</a></li>
-                <li><a href="#">Reservations</a></li>
-                <li><a href="#">Tours</a></li>
+                <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/rentals.html">Rentals</a></li>
+                <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/reservations.html">Reservations</a></li>
+                <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/tours.html">Tours</a></li>
             </ul>
         </nav>
-        <a class="contact" href="#"><button>Contact Us!</button></a>
+        <a class="contact" href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/contact.html"><button>Contact Us!</button></a>
     </header>
     <main id="pupper">
         <h2>Pupper Gallery Easter Egg</h2>
@@ -128,18 +128,18 @@
             <div class="feetBarNav">
                 <ul>
                     <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/index.html">Home</a></li>
-                    <li><a href="#">Rentals</a></li>
-                    <li><a href="#">Reservations</a></li>
-                    <li><a href="#">Tours</a></li>
+                    <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/rentals.html">Rentals</a></li>
+                    <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/reservations.html">Reservations</a></li>
+                    <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/tours.html">Tours</a></li>
                     <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/pupper.html">Pupper</a></li>
                 </ul>
             </div>
             <div class="feetBarContact">
                 <ul>
                     <li><b>Contact Information</b></li>
-                    <li>Address: 1000 fake street</li>
-                    <li>Phone number: (555) 555-5555</li>
-                    <li>Email: totallyrealemail@fakeEmail.com</li>
+                    <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/contact.html">Address: 1000 fake street</a></li>
+                    <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/contact.html">Phone number: (555) 555-5555</a></li>
+                    <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/contact.html">Email: totallyrealemail@fakeEmail.com</a></li>
                 </ul>
             </div>
         </div>
