--- a/scootsProject/index.html
+++ b/scootsProject/index.html
@@ -11,7 +11,7 @@
     <link href="css/small.css" rel="stylesheet" />
     <link href="css/medium.css" rel="stylesheet" />
     <link href="css/large.css" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link rel="shortcut icon" href="assets/favicon.ico">
     <title>Scoots Home</title>
 </head>
