--- a/scootsProject/reservations.html
+++ b/scootsProject/reservations.html
@@ -29,7 +29,7 @@
                 <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/tours.html">Tours</a></li>
             </ul>
         </nav>
-        <a class="contact" href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/contact.html"><button>Contact Us!</button></a>
+        <a class="contact" href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/contact.html">Contact Us!</a>
     </header>
     <main>
         <h1>Reservations</h1>
