--- a/scootsProject/tours.html
+++ b/scootsProject/tours.html
@@ -26,7 +26,7 @@
                 <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/index.html">Home</a></li>
                 <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/rentals.html">Rentals</a></li>
                 <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/reservations.html">Reservations</a></li>
-                <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/tours.html">Tours</a></li>
+                <li><a class="active" href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/tours.html">Tours</a></li>
             </ul>
         </nav>
         <a class="contact" href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/contact.html">Contact Us!</a>
