--- a/scootsProject/rentals.html
+++ b/scootsProject/rentals.html
@@ -24,7 +24,7 @@
             <ul class= "navBar">
                 <li><a class="ham" href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
                 <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/index.html">Home</a></li>
-                <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/rentals.html">Rentals</a></li>
+                <li><a class="active" href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/rentals.html">Rentals</a></li>
                 <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/reservations.html">Reservations</a></li>
                 <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/tours.html">Tours</a></li>
             </ul>
