--- a/scootsProject/reservations.html
+++ b/scootsProject/reservations.html
@@ -44,9 +44,7 @@
                 <label class="top">Country<input list="country-type-list" name="countryType"></label>
             </fieldset>
             <fieldset class="field">
-                <legend>
-                    Reservation Information
-                </legend>
+                <legend>Reservation Information</legend>
                 <label class="top">Date of Arrival<input type="date" name="dateOfArrival" required></label>
                 <label class="top">Half or Full Day<input list="halfOrFullDay" name="halfOrFullDay" required></label>
                 <datalist id="halfOrFullDay">
