--- a/scootsProject/confirm.html
+++ b/scootsProject/confirm.html
@@ -1,1 +1,77 @@
-hello
+<!DOCTYPE html>
+<html lang="en-us">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Scoots motor scooter rental company">
+    <meta name="keywords" content="Scoots, motor scooter, rental">
+    <meta name="author" content="Samuel Witt">
+
+    <link rel="stylesheet" href="css/normalize.css">
+    <link href="css/small.css" rel="stylesheet" />
+    <link href="css/medium.css" rel="stylesheet" />
+    <link href="css/large.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link rel="shortcut icon" href="assets/favicon.ico">
+    <title>Scoots Home</title>
+</head>
+<body>
+<div id="container">
+<div id="main">
+    <header>
+        <a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/index.html"><img src="assets/logo.png" alt="Scoots Logo" class="logo"></a>
+        <nav>
+            <ul class= "navBar">
+                <li><a class="ham" href="#" onclick="toggleMenu()">&#9776; Menu</a></li>
+                <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/index.html">Home</a></li>
+                <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/rentals.html">Rentals</a></li>
+                <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/reservations.html">Reservations</a></li>
+                <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/tours.html">Tours</a></li>
+            </ul>
+        </nav>
+        <a class="contact" href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/contact.html">Contact Us!</a>
+    </header>
+    <main>
+        <h1>Confirmed</h1>
+    </main>
+</div>
+</div>
+    <footer id="footer">
+        <div class="feetBarMain">
+            <div class="feetBarSocial">
+                <ul>
+                    <li><a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                    <li><a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                </ul>
+            </div>
+            <div class="feetBarNav">
+                <ul>
+                    <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/index.html">Home</a></li>
+                    <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/rentals.html">Rentals</a></li>
+                    <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/reservations.html">Reservations</a></li>
+                    <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/tours.html">Tours</a></li>
+                    <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/pupper.html">Pupper</a></li>
+                </ul>
+            </div>
+            <div class="feetBarContact">
+                <ul>
+                    <li><b>Contact Information</b></li>
+                    <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/contact.html">Address: 1000 fake street</a></li>
+                    <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/contact.html">Phone number: (555) 555-5555</a></li>
+                    <li><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/contact.html">Email: totallyrealemail@fakeEmail.com</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="feetBarBottom">
+            <p>&copy;2020 | Samuel Witt | Idaho |<a href="https://www.byui.edu/online" target="_blank"> BYUI Online Learning</a><br>Last Date Updated: <span id="currentdate"></span></p>
+        </div>
+    </footer>
+    <script src="js/date.js"></script>
+    <script src="js/ham.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+    <script> WebFont.load({google: {families: ['Fenix', 'Exo']}});</script>
+    <!-- Font Awesome is fully open source and is GPL friendly. You can use it for commercial projects, open source projects, or really just about whatever you want. -->
+    <script src="https://use.fontawesome.com/a29b6a36eb.js"></script>
+</body>
+</html>
