--- a/scootsProject/reservations.html
+++ b/scootsProject/reservations.html
@@ -70,7 +70,7 @@
                 <label class="top">Cruise Line<input type="text" name="cruiseLine"></label>
                 <label class="top">Additional Information or Comments<textarea name="comments" rows="7" cols="35"></textarea></label>
             </fieldset>
-            <input type="submit" value="Thank You For Helping" class="submitBtn" onclick="confirm()">
+            <input type="submit" value="Your Trip Is Planned!" class="submitBtn" onclick="confirm()">
         </form> 
     </main>
 </div>
