--- a/scootsProject/tours.html
+++ b/scootsProject/tours.html
@@ -31,8 +31,40 @@
         </nav>
         <a class="contact" href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/contact.html">Contact Us!</a>
     </header>
-    <main>
-        <h1>Tours</h1>
+    <main id="tours">
+        <h1>Sign up for one of our many tours</h1>
+        <div class="tourCards">
+            <div class="tourSection">
+                <div class="tourInfo">
+                    <h2>The Mountain of MTN</h2>
+                    <p>Guided Tour</p>
+                    <div class="tourText">
+                        <p>Bet you didn't know that there are no mountains on Cozumel. Well I learned that as I was writing this and don't want to change to a different tour. Travel along the smooth roads to the top of the peak of 49ft from sea level and see the beauty of Cozumel like never before.</p>
+                    </div>
+                </div>
+                <img src="assets/tourMountains350-263.jpg" alt="nice looking mountain" class="tourImg">
+            </div>
+            <div class="tourSection">
+                <div class="tourInfo">
+                    <h2>The Beach of BCH</h2>
+                    <p>Non-guided Tour</p>
+                    <div class="tourText">
+                        <p>When going around the beaches you will be able to hear the relaxing waves nearby. Traveling by scooter will help you visit all the beaches you want to visit. On this tour you choose where you want to go. You will be given a map of locations that we love to visit here in Cozumel.</p>
+                    </div>
+                </div>
+                <img src="assets/tourBeach350-263.jpg" alt="nice looking beach" class="tourImg">
+            </div>
+            <div class="tourSection">
+                <div class="tourInfo">
+                    <h2>The Jungle of JNG</h2>
+                    <p>Guided Tour</p>
+                    <div class="tourText">
+                        <p>Have you ever wondered what that noise was coming from the forest? Have you ever wondered what kind of animal that was sitting in the trees? Come on this safe guided nature tour and find out what lives here in Cozumel. You will follow the tour guide on your vehicle to see animals!</p>
+                    </div>      
+                </div>
+                <img src="assets/tourJungle350-263.jpg" alt="nice looking jungle" class="tourImg">
+            </div>
+        </div>
     </main>
 </div>
 </div>
