--- a/scootsProject/confirm.html
+++ b/scootsProject/confirm.html
@@ -31,8 +31,9 @@
         </nav>
         <a class="contact" href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/contact.html">Contact Us!</a>
     </header>
-    <main>
-        <h1>Confirmed</h1>
+    <main id="confirm">
+        <h1>Thank you for choosing Scoots for your next adventure!</h1>
+        <p><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/index.html">You can click here to go back to the Home page.</a></p>
     </main>
 </div>
 </div>
