--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
         margin: auto;
         max-width: 80%;
         border-radius: 1em;
-        background-color: #809848;
+        background-color: purple;
     }
     </style>
 </head>
