--- a/404.html
+++ b/404.html
@@ -3,27 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/notFound.css" rel="stylesheet" />
+    <link rel="stylesheet" href="scootsProject/css/normalize.css">
+    <link href="scootsProject/css/small.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="scootsProject/assets/favicon.ico">
     <title>404</title>
-    <style>
-    body {
-    font-size: 2rem;
-    margin: 2em auto;
-    text-align: center;
-    }
-    main {
-        padding: 1em;
-        margin: auto;
-        max-width: 80%;
-        border-radius: 1em;
-        background-color: purple;
-    }
-    </style>
 </head>
-<body>
-    <main>
+<body id="fourOFourBody">
+    <main id="fourOFourMain">
         <h1>404 Page Not Found</h1>
-        <h3>Click link <a href="https://valiantwolf.github.io/ValiantWolf.github.io/lesson11/index.html">here</a> to go back to home.</h3>
+        <h3><a href="https://valiantwolf.github.io/ValiantWolf.github.io/scootsProject/index.html">Click link here to go back to home.</a></h3>
     </main>
 </body>
 </html>
