--- a/scootsProject/rentals.html
+++ b/scootsProject/rentals.html
@@ -13,7 +13,7 @@
     <link href="css/large.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="shortcut icon" href="assets/favicon.ico">
-    <title>Scoots Home</title>
+    <title>Rentals</title>
 </head>
 <body>
 <div id="container">
