--- a/scootsProject/404.html
+++ b/scootsProject/404.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="scootsProject/css/normalize.css">
-    <link href="scootsProject/css/small.css" rel="stylesheet" />
-    <link rel="shortcut icon" href="scootsProject/assets/favicon.ico">
+    <link href="css/small.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="assets/favicon.ico">
     <title>404</title>
 </head>
 <body id="fourOFourBody">
