--- a/scootsProject/rentals.html
+++ b/scootsProject/rentals.html
@@ -33,6 +33,34 @@
     </header>
     <main>
         <h1>Rentals</h1>
+        <label class="top">Rental Types
+            <select name="rental" id="rentalType">
+                <option value="" selected disabled>Select Rental Type  &#9662;</option>
+                <option value="1">Honda Metro Scooter</option>
+                <option value="2">Honda Dio Scooter</option>
+                <option value="3">Honda PCX150 Scooter</option>
+                <option value="4">Honda Pioneer ATV</option>
+                <option value="5">Jeep Wrangler - 4 door</option>
+                <option value="6">Jeep Wrangler - 2 door</option>
+            </select>
+        </label>
+        <button onclick="yes()"></button>
+        <div id="content"></div>
+        <div class="rentalInfo">
+            <h2>Important Information</h2>
+            <ul>
+                <li>A $50 security deposit is required to confirm reservations.</li>
+                <li>A valid driver's license is required in hand at time of rental.</li>
+                <li>No one under 12 years of age is allowed to ride on the scooters.</li>
+                <li>Fuel charge not included.</li>
+                <li>Unlimited mileage.</li>
+                <li>Liability insurance is free of charge.</li>
+                <li>Reservations rate requires 24 hour prior notification.</li>
+                <li>Free delivery to Cozumel hotel, Airbnb, or private residence for 2+ day rentals.</li>
+                <li>Payment via Google Pay, cash, credit card, debit card, or PayPal.</li>
+                <li>Rentals may be returned to either location.</li>
+            </ul>
+        </div>
     </main>
 </div>
 </div>
@@ -73,5 +101,7 @@
     <script> WebFont.load({google: {families: ['Fenix', 'Exo']}});</script>
     <!-- Font Awesome is fully open source and is GPL friendly. You can use it for commercial projects, open source projects, or really just about whatever you want. -->
     <script src="https://use.fontawesome.com/a29b6a36eb.js"></script>
+    <script type="text/javascript" src="data/rental.JSON"></script>
+    <script type="text/javascript" src="js/rentals.js"></script>
 </body>
 </html>
